# mianct-schema

./: Makefile  README.md  mkdocs.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yaml
docs/: 404.html  Boolean.html  CellType.html  Date.html  Datetime.html  Decimal.html  Double.html  Float.html  Integer.html  NarrativeText.html  Ncname.html  Nodeidentifier.html  Objectidentifier.html  OrganismTaxon.html  String.html  Time.html  Uri.html  Uriorcurie.html  credits.html  develops_from.html  develops_into.html  diagnostic_description.html  home.html  id.html  index.html  label.html  major_class.html  major_class_enum.html  major_life_stage.html  major_life_stage_enum.html  morphology.html  morphology_enum.html  organ_or_tissue.html  previous_observations.html  search.html  sitemap.xml  taxon.html
docs/Boolean/: index.html
docs/CellType/: index.html
docs/Date/: index.html
docs/Datetime/: index.html
docs/Decimal/: index.html
docs/Double/: index.html
docs/Float/: index.html
docs/Integer/: index.html
docs/NarrativeText/: index.html
docs/Ncname/: index.html
docs/Nodeidentifier/: index.html
docs/Objectidentifier/: index.html
docs/OrganismTaxon/: index.html
docs/String/: index.html
docs/Time/: index.html
docs/Uri/: index.html
docs/Uriorcurie/: index.html
docs/credits/: index.html
docs/develops_from/: index.html
docs/develops_into/: index.html
docs/diagnostic_description/: index.html
docs/home/: index.html
docs/id/: index.html
mianct/: mianct.py
model/: CONFIG.yaml
tests/: test_input_against_model.py
(+16 files in other folders)
