[metadata]
name = mianct
url = https://github.com/obophenotype/mianct
author = Chris Mungall
author_email = cjmungall@lbl.gov
summary = Minimal Information About a new Cell Type
description = Minimal Information About a new Cell Type
long_description = Minimal Information About a new Cell Type
home_page = https://obophenotype.github.io/mianct
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    cell-types
    OWL
    linkml

[options]
include_package_data = True

[files]
packages =
    mianct

data-files = mianct/model = mianct/model/*
    mianct/jsonld_context = mianct/jsonld_context/*
    mianct/json_schema = mianct/json_schema/*
    mianct/model = mianct/model/*
    mianct/sqlddl = mianct/sqlddl/*


